apps/deemix/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deemix
  labels:
    network-dns-egress: "true"
