apps/deemix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deemix
  namespace: deemix
  labels:
    app: deemix
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: deemix
  template:
    metadata:
      labels:
        app: deemix
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: deemix
          image: ghcr.io/bambanah/deemix:v4.7.1
          imagePullPolicy: IfNotPresent
          command: ["node", "/app/packages/webui/dist/main.js"]
          ports:
            - containerPort: 6595
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /
              port: 6595
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 6595
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: deemix-media-pvc
              mountPath: /downloads
            - name: empty
              subPath: config
              mountPath: /config
            - name: empty
              subPath: tmp
              mountPath: /tmp

      volumes:
        - name: deemix-media-pvc
          persistentVolumeClaim:
            claimName: deemix-media-pvc
        - name: empty
          emptyDir: {}
