apps/deemix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deemix
  namespace: deemix
spec:
  selector:
    app: deemix
  ports:
    - port: 80
      targetPort: 6595
